Fix issue 2682  Better spacing between embedded video and video links (#2700)
Better spacing between embedded video and video links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,10 @@
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 30px; height: 0; overflow: hidden;
+  padding-top: 30px; 
+  height: 0; 
+  overflow: hidden;
+  margin-bottom: 50px;
 }
 
 .video-container iframe,
